<resources>
    <string name="app_name">TestApi</string>
    <string name="no_more_items">No more items</string>
    <string name="retry_paging">retry</string>
    <string name="character_status">Status</string>
    <string name="character_species">Species</string>
    <string name="character_location">Location</string>
    <string name="retry_load_content">Retry</string>
    <string name="select_filter_status">Select status filter</string>
    <string name="select_filter_species">Select species filter</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="character_profile">Profile</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--Filter Species-->
    <string name="all">"all"</string>
    <string name="humanoid">"humanoid"</string>

    <string-array name="filterSpecies">
        <item>@string/all</item>
        <item>@string/humanoid</item>
    </string-array>

    <!--Filter Status-->
    <string name="alive">alive"</string>
    <string name="dead">"dead"</string>
    <string name="unknown">"unknown"</string>
    <string name="character_name">name</string>

    <string-array name="filterStatus">
        <item>@string/all</item>
        <item>@string/alive</item>
        <item>@string/dead</item>
        <item>@string/unknown</item>
    </string-array>


</resources>