<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/item_character_corner">


    <!-- I used a nested FrameLayout since I have an implementation of swipe
        to the right with a transition to another activity but
        in this implementation it is a useless nesting-->
    <FrameLayout
        android:id="@+id/fl_anim_test"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/img_background_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_profile_rounded" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_character"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_gravity="end"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />


        <TextView
            android:id="@+id/txt_scroll_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="120dp"
            android:gravity="center"
            android:lines="1"
            android:textSize="18sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_character_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/character_name"
        android:textColor="#74B747"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_character_planet"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_character_planet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_character_name"
        app:layout_constraintEnd_toStartOf="@+id/img_character_species"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_character_species"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_species"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_character_status"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_character_planet"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_character_status"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_character_species"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_character_planet"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/character_location"
        android:textColor="#74B747"
        android:textSize="@dimen/character_info_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_character_planet"
        app:layout_constraintStart_toStartOf="@+id/img_character_planet"
        app:layout_constraintTop_toBottomOf="@+id/img_character_planet" />

    <TextView
        android:id="@+id/txt_character_species"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/character_species"
        android:textColor="#74B747"
        android:textSize="@dimen/character_info_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_character_species"
        app:layout_constraintStart_toStartOf="@+id/img_character_species"
        app:layout_constraintTop_toBottomOf="@+id/img_character_species" />

    <TextView
        android:id="@+id/txt_character_status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/character_status"
        android:textColor="@color/colorRick"
        android:textSize="@dimen/character_info_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_character_status"
        app:layout_constraintStart_toStartOf="@+id/img_character_status"
        app:layout_constraintTop_toBottomOf="@+id/img_character_status" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>